--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,12 @@ img{
     top: 0;
     left: 0;
     width: 100%;
+    transition: .2s linear;
+    padding-bottom: 20px;
+    z-index: 9;
+}
+.header_active {
+    background: #0E1D28;
 }
 
 .header__wrapper {
@@ -382,3 +388,182 @@ img{
     z-index: 4;
 }
 /*Places styles End */
+
+/*Tours styles Start */
+.tours {
+    margin-bottom: 139px;
+}
+.tours__tour {
+    display : grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0 108px;
+    align-items: center;
+    margin-bottom: 77px;
+}
+.tour__info{
+    align-items: center;
+    padding-left: 47px;
+}
+.tour_title{
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 85px;
+}
+.tour__desc{
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 58px;
+}
+.tour__more {
+    font-size: 16px;
+    text-decoration: none;
+    color: #006DFE;
+    background: url("../img/svg/arrow-right-icon.svg") no-repeat 95% center;
+    padding-right: 59px;
+}
+.tour__more:hover, .tour__more:focus {
+    background: url("../img/svg/arrow-right-icon.svg") no-repeat right center;
+    opacity: .85;
+}
+/*Tours styles End */
+
+/*Top styles Start */
+.top{
+    margin-bottom: 86px;
+}
+.top__title{
+    margin-bottom: 54px;
+}
+.top__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 57px;
+}
+.top__card-pic{
+    position: relative;
+}
+.top__card{
+    display: flex;
+    flex-direction: column;
+}
+.top__card-stats{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
+    left:0;
+    width: 100%;
+    background: rgba(21, 24, 36, 0.6);
+    padding: 16px 25px;
+}
+.top__card-title {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #fff;
+    margin: 0 auto 0 0;
+}
+.top__card-likes {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    padding-right: 20px;
+    margin-right: 14px;
+    background: url("../img/svg/heart-ico.svg") no-repeat right;
+}
+.top__card-likes:hover, .top__card-likes:focus {
+    opacity: 0.75;
+    color: red;
+}
+.top__card-comments {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    padding-right: 23px;
+    background: url("../img/svg/comment-ico.svg") no-repeat right;
+}
+.top__card-comments:hover, .top__card-comments:focus {
+    opacity: 0.75;
+    color: red;
+}
+.top__card-desc {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 31px;
+}
+.top__card-more {
+    width: 118px;
+    padding: 12px 19px;
+    background: #006DFE;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+    margin: auto 0 0;
+}
+
+.top__card-more:hover, .top__card-more:focus, .top__card-more:active {
+    background: #0e66da;
+}
+/*Top styles End */
+/*Videos styles start */
+.videos {
+    width: 100%;
+    padding-top: 139px;
+}
+.videos_wrapper{
+    max-width: 1440px;
+    margin: 0 auto;
+    position: relative;
+}
+.video__item{
+    padding-top: 56.25%;
+}
+.video__element{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+/*Videos styles End */
+
+/*Footer styles Start */
+.footer{
+    background: #0E1D28;
+    padding: 119px 0;
+}
+.footer__item{
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer__logo{
+    width: 50%;
+}
+.footer__nav {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    justify-content: space-between;
+}
+.footer__menu-title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+.footer__menu-link{
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    text-decoration: none;
+}
+.footer__menu-link:hover, .footer__menu-link:focus, .footer__menu-link:active {
+    opacity: .75;
+}
+/*Footer styles End */
